<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <artifactId>OOS-P5</artifactId>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgs>
                        <arg>--release</arg>
                        <arg>21</arg>
                    </compilerArgs>
                </configuration>
                <version>3.14.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
            </plugin>
            <plugin>
                <artifactId>javafx-maven-plugin</artifactId>
                <groupId>org.openjfx</groupId>
                <version>${javafx.maven.plugin.version}</version>
                <configuration>
                    <mainClass>FxApplication</mainClass>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <artifactId>junit-jupiter</artifactId>
            <groupId>org.junit.jupiter</groupId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <artifactId>gson</artifactId>
            <groupId>com.google.code.gson</groupId>
            <version>2.10</version>
        </dependency>
        <dependency>
            <artifactId>javafx-controls</artifactId>
            <groupId>org.openjfx</groupId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <artifactId>javafx-fxml</artifactId>
            <groupId>org.openjfx</groupId>
            <version>${javafx.version}</version>
        </dependency>
    </dependencies>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <artifactId>junit-bom</artifactId>
                <groupId>org.junit</groupId>
                <scope>import</scope>
                <type>pom</type>
                <version>5.8.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <groupId>de.fh_aachen.oos</groupId>
    <modelVersion>4.0.0</modelVersion>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <javafx.version>21</javafx.version>
        <javafx.maven.plugin.version>0.0.6</javafx.maven.plugin.version>
    </properties>
</project>